--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mmp-mockapi",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/main.js"
@@ -12,9 +13,9 @@
   "description": "",
   "dependencies": {
     "better-sqlite3": "^11.2.1",
-    "body-parser": "^1.20.2",
+    "body-parser": "1.20.3",
     "cors": "^2.8.5",
-    "express": "^4.19.2",
+    "express": "5.0.0",
     "express-validator": "^7.2.0",
     "jsonwebtoken": "^9.0.2"
   },
@@ -22,6 +23,7 @@
     "@types/better-sqlite3": "^7.6.11",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.6"
+    "@types/jsonwebtoken": "^9.0.6",
+    "typescript": "^5.8.0-dev.20241213"
   }
 }
